--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:hardwareAccelerated="true" android:description="@string/app_description">
         <activity
             android:name="com.laz.arya.MainActivity"
             android:label="@string/app_name" >
